# deepdiver

./: readme.md
deepdiver_crew/: .gitignore  README.md  pyproject.toml  sample.env
deepdiver_crew/Users/kevinnayar/workspace/dev/deepdiver/deepdiver_crew/src/output/: topic.md
deepdiver_crew/output/: output.md
deepdiver_crew/src/deepdiver_crew/: crew.py  main.py
deepdiver_crew/src/deepdiver_crew/config/: agents.yaml  tasks.yaml
