[project]
name = "deepdiver_crew"
version = "0.1.0"
description = "deepdiver_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
deepdiver_crew = "deepdiver_crew.main:run"
run_crew = "deepdiver_crew.main:run"
train = "deepdiver_crew.main:train"
replay = "deepdiver_crew.main:replay"
test = "deepdiver_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
